# mil-kit

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
psd/: processor.py
src/mil_kit/: main.py
src/mil_kit/meta/: copyright.py  mdd.py
src/mil_kit/watermark/: add.py  batch.py
src/psd_toolkit/: job.py  main.py
tests/: smoke_test.py
